# marina

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  _marina_exec.py  bump-version.sh  bump_version.sh  default.rl  flake.nix  make-deb.bash  make-deb.sh  package.xml  pyproject.toml  setup.cfg  setup.py  update_mirror.bash
.forgejo/workflows/: docs.yml  release.yml  test.yml
bindings/c/: marina.h
bindings/c/examples/: example.c
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: example.py
bindings/python/src/: lib.rs
docs/: zensical.toml
docs/docs/: config.md  index.md
docs/docs/features/: ci.md  compression.md  datasets.md  registries.md
docs/docs/features/shell/: completions.md
docs/docs/installation/: archives.md  packages.md  ros.md
docs/docs/libraries/: c.md  python.md  rust.md
examples/: library_usage.rs
nix/: BuildDocs.nix
packaging/arch/: PKGBUILD
packaging/arch-bin/: PKGBUILD
packaging/homebrew/: marina.rb
ros2_marina/: package.xml  setup.cfg
ros2_marina/ros2_marina/verb/: clean.py  export.py  ls.py  pull.py  push.py  registry.py  resolve.py  rm.py  search.py  version.py
ros2_marina/verb/: bag_import.py  completions.py  inspect.py  pull.py  registry.py  rm.py
src/: cleanup.rs  ffi.rs  lib.rs  main.rs  progress.rs
src/cli/: app.rs  mod.rs
src/core/: marina.rs  mod.rs
src/io/: bag.rs  db3_transform.rs  mcap_transform.rs  mod.rs  pack.rs  transform_progress.rs
src/model/: bag_ref.rs  mod.rs
src/registry/: aws.rs  driver.rs  folder.rs  gdrive.rs  gdrive_auth.rs  http.rs  mod.rs  ssh.rs  stub.rs
src/storage/: cache.rs  config.rs  mod.rs
tests/: config_default_behavior.rs  db3_pack_pull.rs  default_registry.rs  directory_registry_roundtrip.rs  mcap_transform_read.rs
verb/: clean.py  export.py  ls.py  push.py  resolve.py  search.py  version.py
