[package]
name = "marina"
version = "0.0.1"
edition = "2024"

[lib]
name = "marina"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "marina"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
cloudini = "0.1.0"
cdr = "0.2"
dirs = "6.0"
flate2 = "1.1"
glob = "0.3"
indicatif = "0.17"
jsonwebtoken = "9.3"
mcap = "0.24"
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
regex = "1.11"
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = ["sensor_msgs", "std_msgs", "builtin_interfaces"] }
ros_pointcloud2 = { version = "1.0.0-rc.3", features = ["ros2_interfaces_jazzy_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ssh2 = "0.9"
tar = "0.4"
toml = "0.9"
walkdir = "2.5"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.5"
