[package]
name = "marina"
version = "0.0.2"
edition = "2024"
include = ["**/*.rs", "**/*.md", "**/Cargo.toml", "**/LICENSE*"]
keywords = ["robotics"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/stelzo/marina"
authors = ["Christopher 'stelzo' Sieh <stelzo@steado.de>"]
rust-version = "1.85"
description = "A dataset manager for robotics to organize, share, and discover datasets and metadata across storage backends."

[lib]
name = "marina"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "marina"
path = "src/main.rs"

[features]
default = ["osnabotics-default-registry", "db3"]
osnabotics-default-registry = ["gdrive"]
db3 = ["dep:rusqlite"]
gdrive = ["dep:jsonwebtoken", "dep:regex"]

[dependencies]
anyhow = "1.0"
ctrlc = "3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
cloudini = { version = "0.2.0", default-features = false, features = ["ros"] }
cdr = "0.2"
dirs = "6.0"
flate2 = "1.1"
glob = "0.3"
indicatif = "0.17"
jsonwebtoken = { version = "9.3", optional = true }
mcap = { version = "0.24", features = ["zstd", "lz4"] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
] }
regex = { version = "1.11", optional = true }
rusqlite = { version = "0.38", optional = true }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "sensor_msgs",
  "std_msgs",
  "builtin_interfaces",
] }
ros_pointcloud2 = { version = "1.0.0-rc.3", features = [
  "ros2_interfaces_jazzy_serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ssh2 = "0.9"
rpassword = "7"
tar = "0.4"
toml = "0.9"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]

[dependencies.tempfile]
version = "3.5"

[lints.clippy]
manual_is_multiple_of = "allow" # rust 1.85 compatible

[profile.release]
strip = "symbols" # Significantly reduce binary size
opt-level = "s"   # Optimize for size but keep some performance
debug = 0

[profile.full-release]
inherits = "release"
lto = "fat"          # Link Time Optimization
codegen-units = 1    # Slower compile times but compiler sees all generated code and can optimize over everything across modules. Also decreases binary size.

[profile.colcon]
inherits = "release"

[package.metadata.deb]
name = "marina"
section = "science"
priority = "optional"
assets = [["target/release/marina", "usr/bin/marina", "755"]]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ name }-{ version }/{ bin }{ binary-ext }"
