[package]
name = "marina"
version = "0.2.0"
edition = "2024"
include = ["**/*.rs", "**/*.md", "**/Cargo.toml", "**/LICENSE*", "default.rl"]
keywords = ["robotics"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/stelzo/marina"
authors = ["Christopher Sieh <stelzo@steado.de>"]
rust-version = "1.85"
description = "A dataset manager for robotics to organize, share, and discover datasets and metadata across storage backends."

[lib]
name = "marina"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "marina"
path = "src/main.rs"

[features]
default = ["osnabotics-default-registry", "db3"]
osnabotics-default-registry = ["gdrive"]
db3 = ["dep:rusqlite"]
gdrive = ["dep:base64", "dep:ring", "dep:regex"]
cloudini-cpp = ["cloudini/use_cpp"]

[dependencies]
anyhow = "1.0"
ctrlc = "3.5"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
cloudini = { version = "0.3", default-features = false, features = ["ros"]}
cdr = "0.2"
dirs = "6.0"
flate2 = "1.1"
glob = "0.3"
indicatif = "0.17"
base64 = { version = "0.22", optional = true }
ring = { version = "0.17", optional = true }
mcap = { version = "0.24", features = ["zstd", "lz4"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
  "stream",
] }
regex = { version = "1.11", optional = true }
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "sensor_msgs",
  "std_msgs",
  "builtin_interfaces",
] }
ros_pointcloud2 = { version = "1.0.0-rc.3", features = [
  "ros2_interfaces_jazzy_serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
russh = { version = "0.57", default-features = false, features = ["ring"] }
russh-sftp = "2.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "fs", "sync", "time"] }
async-trait = "0.1"
rpassword = "7"
tar = "0.4"
ratslang = "0.4"
walkdir = "2.5"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
tempfile = "3.5"

[dev-dependencies]

[lints.clippy]
manual_is_multiple_of = "allow" # rust 1.85 compatible

[profile.release]
strip = "symbols" # Significantly reduce binary size
opt-level = "s"   # Optimize for size but keep some performance
debug = 0

[profile.full-release]
inherits = "release"
lto = "fat"          # Link Time Optimization
codegen-units = 1    # Slower compile times but compiler sees all generated code and can optimize over everything across modules. Also decreases binary size.

[profile.colcon]
inherits = "release"

[package.metadata.deb]
name = "marina"
section = "science"
priority = "optional"
assets = [["target/release/marina", "usr/bin/marina", "755"]]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ version }/{ bin }{ binary-ext }"
