<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marina</name>
  <version>0.2.3</version>
  <description>A dataset manager for robotics to organize, share, and discover datasets and metadata across storage backends.</description>
  <maintainer email="stelzo@steado.de">Christopher Sieh</maintainer>
  <license>MIT</license>
  <author>Christopher Sieh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>cargo</build_depend>
  <depend>ros2bag</depend>
  <depend>ros2cli</depend>
  <depend>libclang-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
