[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "marina"
description = "A dataset manager for robotics to organize, share, and discover datasets and metadata across storage backends."
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["robotics", "ros2", "datasets", "data management", "point clouds", "bag files"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Rust",
  "Framework :: Robot Framework :: Tool",
]

[tool.maturin]
bindings = "bin"
