[metadata]
name = marina
version = 0.0.1
description = ROS2 CLI extension for marina bag management
license = MIT

[options]
packages = find:
install_requires =
  ros2bag
  ros2cli

[options.entry_points]
ros2bag.verb =
    pull = marina.verb.pull:PullVerb
    push = marina.verb.push:PushVerb
    ls = marina.verb.ls:LsVerb
    search = marina.verb.search:SearchVerb
    resolve = marina.verb.resolve:ResolveVerb
    export = marina.verb.export:ExportVerb
    rm = marina.verb.rm:RmVerb
    clean = marina.verb.clean:CleanVerb
    version = marina.verb.version:VersionVerb
    registry = marina.verb.registry:RegistryVerb

[options.package_data]
* = package.xml
marina = _bin/*
