[metadata]
name = marina
version = 0.0.1
description = ROS2 CLI extension for marina bag management
license = MIT

[options]
packages =
  ros2_marina
  ros2_marina.verb
  ros2_marina._bin
package_dir =
  ros2_marina = .
install_requires =
  ros2bag
  ros2cli

[options.data_files]
share/marina =
  package.xml
share/ament_index/resource_index/packages =
  resource/marina

[options.entry_points]
ros2bag.verb =
    pull = ros2_marina.verb.pull:PullVerb
    push = ros2_marina.verb.push:PushVerb
    datasets = ros2_marina.verb.ls:LsVerb
    ds = ros2_marina.verb.ls:LsVerb
    search = ros2_marina.verb.search:SearchVerb
    resolve = ros2_marina.verb.resolve:ResolveVerb
    export = ros2_marina.verb.export:ExportVerb
    rm = ros2_marina.verb.rm:RmVerb
    clean = ros2_marina.verb.clean:CleanVerb
    version = ros2_marina.verb.version:VersionVerb
    registry = ros2_marina.verb.registry:RegistryVerb

[options.package_data]
* = package.xml
ros2_marina = _bin/*
