[metadata]
name = ros2_marina
version = 0.0.1
description = ROS2 CLI extension for marina bag management
license = MIT

[options]
packages = find:
install_requires =
  ros2bag
  ros2cli

[options.entry_points]
ros2bag.verb =
    pull = ros2_marina.verb.pull:PullVerb
    push = ros2_marina.verb.push:PushVerb
    ls = ros2_marina.verb.ls:LsVerb
    search = ros2_marina.verb.search:SearchVerb
    resolve = ros2_marina.verb.resolve:ResolveVerb
    export = ros2_marina.verb.export:ExportVerb
    rm = ros2_marina.verb.rm:RmVerb
    clean = ros2_marina.verb.clean:CleanVerb
    version = ros2_marina.verb.version:VersionVerb
    registry = ros2_marina.verb.registry:RegistryVerb

[options.package_data]
* = package.xml
