[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "marina-py"
version = "0.2.1"
description = "Python bindings for Marina bagfile resolver/puller"
requires-python = ">=3.9"

[project.scripts]
marina = "marina:cli_main"

[tool.maturin]
module-name = "marina"
